4 connected workflows
